<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.testsmartapps.presentation.viewmodels.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.GameFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ai_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/ai_first_dice"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ai_second_dice"
                android:src="@drawable/dice_1" />

            <ImageView
                android:id="@+id/ai_second_dice"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/ai_first_dice"
                app:layout_constraintEnd_toStartOf="@id/ai_third_dice"
                android:src="@drawable/dice_2" />

            <ImageView
                android:id="@+id/ai_third_dice"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/ai_second_dice"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/dice_3" />

            <TextView
                android:id="@+id/ai_dice_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/ai_dice_score(viewModel.aiDiceScore)}"
                android:textSize="20sp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/ai_second_dice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/score_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/ai_layout"
            app:layout_constraintBottom_toTopOf="@id/player_layout"
            android:visibility="invisible">

            <TextView
                android:id="@+id/ai_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/ai_score(viewModel.aiScore)}"
                android:textSize="20sp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/player_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/player_score(viewModel.playerScore)}"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/player_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/buttons_layout"
            android:layout_marginBottom="20dp"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/player_first_dice"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/player_second_dice"
                android:src="@drawable/dice_3" />

            <ImageView
                android:id="@+id/player_second_dice"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/player_first_dice"
                app:layout_constraintEnd_toStartOf="@id/player_third_dice"
                android:src="@drawable/dice_5" />

            <ImageView
                android:id="@+id/player_third_dice"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/player_second_dice"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/dice_1" />

            <TextView
                android:id="@+id/player_dice_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/player_dice_score(viewModel.playerDiceScore)}"
                android:textSize="20sp"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toTopOf="@id/player_second_dice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttons_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:visibility="invisible">

            <Button
                android:id="@+id/reroll_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/save_button"
                android:text="@string/reroll" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/reroll_button"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/save" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/start" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/next_round"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/next_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_finished"
            android:textSize="20sp"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toBottomOf="@id/ai_layout"
            app:layout_constraintBottom_toTopOf="@id/next_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>